# motor-realtime

./: .clang-format  .gitignore  .gitmodules  BUILD  BUILD.md  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE-subcomponents.txt  NOTICE.txt  README.md  data.csv  deadline.cpp  kst_plot.kst  main.cpp  motor.h  motor_manager.cpp  motor_manager.h  motor_util.cpp  postinst  postinst.in  prerm.in  rt_version.h.in  usb-skeleton.c
.github/workflows/: ccpp.yml
doc/: build_python_api.md  motor_util_examples.md  motor_util_tree.md  motor_util_tree.sh
example/: CMakeLists.txt  README.md  chirp.cpp  controller.cpp  controller.h  deadline.cpp  deadline_trajectory.cpp  haptic.cpp  joystick.cpp  pipe.cpp  playback.cpp  rt_test.cpp  shm_app.cpp  shm_status.cpp  text_api.cpp  torque_limit.cpp  trajectory.cpp  trajectory_pipe.cpp
include/: cstack.h  keyboard.h  motor.h  motor_app.h  motor_can.h  motor_chain_messages.h  motor_ip.h  motor_manager.h  motor_messages.h  motor_publisher.h  motor_subscriber.h  motor_thread.h  motor_uart.h  motor_usb.h  motor_util_fun.h  realtime_thread.h
protos/: motor_server.proto
python/: backlash.py  calibration.py  calibration_labjack.py  clock.py  dyno.py  example.py  motor.py  motor_calibration.py  motor_client_grpc.py  motor_messages.yaml  motor_old.py  motor_program.py  music.py  parse_header.py  pz_cal.py  test_motor.py  torque_demo.py  torque_demo.service
python/firmware_tools/: __init__.py
python/gcode_test/: .gitignore  README.md  collect_grid.py  gcode_gen.py  points_gen.py
python/logger/: __init__.py
python/power_supply/: rigol.py  sim.py
scripts/: dfu_leave_all.sh  set_timeout_all.sh  setup_can.sh  usbip_attach_all.sh  usbip_bind_all.sh  usbip_detach_all.sh  usbip_unbind_all.sh
share/: 99-realtime-tmp.rules  device_ip_map.json
src/: CMakeLists.txt  motor_python.cpp
src/driver/: CMakeLists.txt  Kbuild  dkms.conf.in  usb-rt.c  usb-skeleton.c
src/motor/: CMakeLists.txt  motor.cpp  motor_app.cpp  motor_can.cpp  motor_data_echo.cpp  motor_ip.cpp  motor_manager.cpp  motor_server.cpp  motor_thread.cpp  motor_uart.cpp  motor_usb.cpp  motor_usbmon.cpp  motor_util.cpp  motor_util_completion.bash  motor_util_fun.cpp  realtime_thread.cpp
src/motor/motor_manager_embedded/: BUILD  CMakeLists.txt
test/: CMakeLists.txt  test_motor.cpp  test_simulated_motor.cpp
