add_executable(pipe pipe.cpp controller.cpp)
target_link_libraries(pipe motor_manager)
add_executable(joystick joystick.cpp)
target_link_libraries(joystick motor_manager)
add_executable(trajectory_pipe trajectory_pipe.cpp)
target_link_libraries(trajectory_pipe motor_manager)
add_executable(trajectory trajectory.cpp)
target_link_libraries(trajectory motor_manager)
add_executable(playback playback.cpp)
target_link_libraries(playback motor_manager)