add_executable(pipe pipe.cpp controller.cpp)
target_link_libraries(pipe motor_manager)
add_executable(joystick joystick.cpp)
target_link_libraries(joystick motor_manager)
add_executable(trajectory_pipe trajectory_pipe.cpp)
target_link_libraries(trajectory_pipe motor_manager)
add_executable(trajectory trajectory.cpp)
target_link_libraries(trajectory motor_manager)
add_executable(playback playback.cpp)
target_link_libraries(playback motor_manager)
add_executable(text_api text_api.cpp)
target_link_libraries(text_api motor_manager)
add_executable(shm_app shm_app.cpp)
target_link_libraries(shm_app motor_manager rt)
add_executable(shm_status shm_status.cpp)
target_link_libraries(shm_status motor_manager rt)
add_executable(chirp chirp.cpp)
target_link_libraries(chirp motor_manager)