add_subdirectory(motor)
if(BUILD_PYTHON_API)
    pybind11_add_module(motor motor_python.cpp)
    target_link_libraries(motor PRIVATE motor_manager)
    install(TARGETS motor LIBRARY DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME})
    install(DIRECTORY ../python DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME})
    install(FILES ../python/torque_demo.service DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/system)
endif()
